more word vomit in appendices.

--- a/massive_stars/manuscript/biblio.bib
+++ b/massive_stars/manuscript/biblio.bib
@@ -793,3 +793,770 @@ archivePrefix = {arXiv},
 }
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% hr_cbm refs copy+paste
+@ARTICLE{2021arXiv211011356A,
+       author = {{Anders}, Evan H. and {Jermyn}, Adam S. and {Lecoanet}, Daniel and {Brown}, Benjamin P.},
+        title = "{Stellar convective penetration: parameterized theory and dynamical simulations}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics, Physics - Fluid Dynamics},
+         year = 2021,
+        month = oct,
+          eid = {arXiv:2110.11356},
+        pages = {arXiv:2110.11356},
+archivePrefix = {arXiv},
+       eprint = {2110.11356},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211011356A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{shaviv_salpeter_1973,
+       author = {{Shaviv}, Giora and {Salpeter}, Edwin E.},
+        title = "{Convective Overshooting in Stellar Interior Models}",
+      journal = {\apj},
+         year = 1973,
+        month = aug,
+       volume = {184},
+        pages = {191-200},
+          doi = {10.1086/152318},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1973ApJ...184..191S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{herwig2000,
+       author = {{Herwig}, F.},
+        title = "{The evolution of AGB stars with convective overshoot}",
+      journal = {\aap},
+     keywords = {STARS: ABUNDANCES, STARS: INTERIORS, STARS: EVOLUTION, STARS: AGB AND POST-AGB, Astrophysics},
+         year = 2000,
+        month = aug,
+       volume = {360},
+        pages = {952-968},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0007139},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000A&A...360..952H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2017ApJ...848L...1R,
+       author = {{Rogers}, T.~M. and {McElwaine}, J.~N.},
+        title = "{On the Chemical Mixing Induced by Internal Gravity Waves}",
+      journal = {\apjl},
+     keywords = {hydrodynamics, stars: general, waves, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2017,
+        month = oct,
+       volume = {848},
+       number = {1},
+          eid = {L1},
+        pages = {L1},
+          doi = {10.3847/2041-8213/aa8d13},
+archivePrefix = {arXiv},
+       eprint = {1709.04920},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...848L...1R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{brummell_etal_2002,
+       author = {{Brummell}, Nicholas H. and {Clune}, Thomas L. and {Toomre}, Juri},
+        title = "{Penetration and Overshooting in Turbulent Compressible Convection}",
+      journal = {\apj},
+     keywords = {Convection, Stars: Interiors, Sun: Interior, Turbulence},
+         year = 2002,
+        month = may,
+       volume = {570},
+       number = {2},
+        pages = {825-854},
+          doi = {10.1086/339626},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...570..825B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{1991ApJ...377..268G,
+       author = {{Garcia Lopez}, Ramon J. and {Spruit}, Hendrik C.},
+        title = "{Li Depletion in F Stars by Internal Gravity Waves}",
+      journal = {\apj},
+     keywords = {Abundance, F Stars, Gravity Waves, Internal Waves, Lithium, Stellar Interiors, Depletion, Stellar Composition, Stellar Envelopes, Stellar Gravitation, Astrophysics, CONVECTION, GRAVITATION, STARS: ABUNDANCES, STARS: INTERIORS, WAVE MOTIONS},
+         year = 1991,
+        month = aug,
+       volume = {377},
+        pages = {268},
+          doi = {10.1086/170356},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1991ApJ...377..268G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{10.1093/mnras/stz047,
+    author = {Korre, L and Garaud, P and Brummell, N H},
+    title = "{Convective overshooting and penetration in a Boussinesq spherical shell}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {484},
+    number = {1},
+    pages = {1220-1237},
+    year = {2019},
+    month = {01},
+    abstract = "{We study the dynamics associated with the extension of turbulent convective motions from a convection zone (CZ) into a stable region (RZ) that lies below the latter. For that purpose, we have run a series of 3D direct numerical simulations solving the Navier–Stokes equations under the Boussinesq approximation in a spherical shell geometry. We observe that the overshooting of the turbulent motions into the stably stratified region depends on three different parameters: the relative stability of the RZ, the transition width between the two, and the intensity of the turbulence. In the cases studied, these motions manage to partially alter the thermal stratification and induce thermal mixing, but not so efficiently as to extend the nominal CZ further down into the stable region. We find that the kinetic energy below the convection zone can be modelled by a half-Gaussian profile whose amplitude and width can be predicted a priori for all of our simulations. We examine different dynamical length-scales related to the depth of the extension of the motions into the RZ, and we find that they all scale remarkably well with a length-scale that stems from a simple energetic argument. We discuss the implications of our findings for 1D stellar evolution calculations.}",
+    issn = {0035-8711},
+    doi = {10.1093/mnras/stz047},
+    url = {https://doi.org/10.1093/mnras/stz047},
+    eprint = {https://academic.oup.com/mnras/article-pdf/484/1/1220/27577458/stz047.pdf},
+}
+
+@article{hunter_2007_aa,
+  abstract = {Matplotlib is a 2D graphics package used for Python
+  for application development, interactive scripting, and
+  publication-quality image generation across user
+  interfaces and operating systems.},
+  author = {Hunter, J. D.},
+  date-added = {2020-12-19 09:52:46 -0700},
+  date-modified = {2020-12-19 09:52:46 -0700},
+  journal = {Computing In Science \&amp; Engineering},
+  number = {3},
+  pages = {90--95},
+  publisher = {IEEE COMPUTER SOC},
+  title = {Matplotlib: A 2D graphics environment},
+  volume = {9},
+  year = 2007}
+
+@article{der_walt_2011_aa,
+  author = {S. van der Walt and S. C. Colbert and G. Varoquaux},
+  date-added = {2020-12-19 09:52:36 -0700},
+  date-modified = {2020-12-19 09:52:36 -0700},
+  doi = {10.1109/MCSE.2011.37},
+  issn = {1521-9615},
+  journal = {Computing in Science Engineering},
+  keywords = {data structures;high level languages;mathematics computing;numerical analysis;Python programming language;high level language;numerical computation;numerical data;numpy array;Arrays;Computational efficiency;Finite element methods;Numerical analysis;Performance evaluation;Resource management;Vector quantization;NumPy;Python;numerical computations;programming libraries;scientific programming},
+  month = {March},
+  number = {2},
+  pages = {22-30},
+  title = {The NumPy Array: A Structure for Efficient Numerical Computation},
+  volume = {13},
+  year = {2011},
+  Bdsk-Url-1 = {http://dx.doi.org/10.1109/MCSE.2011.37}}
+
+@misc{mesasdk_linux,
+  author = {{Townsend}, R.~H.~D.},
+  date-added = {2020-12-19 09:51:54 -0700},
+  date-modified = {2020-12-19 09:51:54 -0700},
+  doi = {10.5281/zenodo.2669541},
+  month = may,
+  publisher = {Zenodo},
+  title = {{MESA SDK for Linux}},
+  url = {https://doi.org/10.5281/zenodo.2669541},
+  version = 20190503,
+  year = 2019,
+  Bdsk-Url-1 = {https://doi.org/10.5281/zenodo.2669541}}
+
+@misc{mesasdk_macos,
+  author = {{Townsend}, R.~H.~D.},
+  date-added = {2020-12-19 09:51:54 -0700},
+  date-modified = {2020-12-19 09:51:54 -0700},
+  doi = {10.5281/zenodo.2669543},
+  month = may,
+  publisher = {Zenodo},
+  title = {MESA SDK for Mac OS},
+  url = {http://doi.org/10.5281/zenodo.2669543},
+  version = 20190503,
+  year = 2019,
+  Bdsk-Url-1 = {https://doi.org/10.5281/zenodo.2669541},
+  Bdsk-Url-2 = {http://doi.org/10.5281/zenodo.2669543}}
+
+@INPROCEEDINGS{2018sf2a.conf..135A,
+       author = {{Augustson}, K.~C. and {Mathis}, S.},
+        title = "{Penetration of Rotating Convection}",
+     keywords = {Instabilities, Turbulence, Stars: convection, evolution, rotation, Astrophysics - Solar and Stellar Astrophysics},
+    booktitle = {SF2A-2018: Proceedings of the Annual meeting of the French Society of Astronomy and Astrophysics},
+         year = 2018,
+       editor = {{Di Matteo}, P. and {Billebaud}, F. and {Herpin}, F. and {Lagarde}, N. and {Marquette}, J. -B. and {Robin}, A. and {Venot}, O.},
+        month = dec,
+        pages = {Di},
+archivePrefix = {arXiv},
+       eprint = {1811.04413},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018sf2a.conf..135A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1995ApJ...446..203B,
+       author = {{Balachandran}, Suchitra},
+        title = "{The Lithium Dip in M67: Comparison with the Hyades, Praesepe, and NGC 752 Clusters}",
+      journal = {\apj},
+     keywords = {GALAXY: OPEN CLUSTERS AND ASSOCIATIONS: INDIVIDUAL MESSIER NUMBER: M67, STARS: ABUNDANCES, STARS: INTERIORS},
+         year = 1995,
+        month = jun,
+       volume = {446},
+        pages = {203},
+          doi = {10.1086/175779},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1995ApJ...446..203B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2018ApJ...859..156K,
+       author = {{Khan}, Saniya and {Hall}, Oliver J. and {Miglio}, Andrea and {Davies}, Guy R. and {Mosser}, Beno{\^\i}t and {Girardi}, L{\'e}o and {Montalb{\'a}n}, Josefina},
+        title = "{The Red-giant Branch Bump Revisited: Constraints on Envelope Overshooting in a Wide Range of Masses and Metallicities}",
+      journal = {\apj},
+     keywords = {stars: evolution, stars: interiors, stars: low-mass, stars: luminosity function, mass function, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = jun,
+       volume = {859},
+       number = {2},
+          eid = {156},
+        pages = {156},
+          doi = {10.3847/1538-4357/aabf90},
+archivePrefix = {arXiv},
+       eprint = {1804.06669},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...859..156K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{1986PASP...98.1066S,
+       author = {{Serrano}, A.},
+        title = "{Effects of convective overshooting on abundances in intermediate-massstars: He and N.}",
+      journal = {\pasp},
+     keywords = {Abundance, Asymptotic Giant Branch Stars, Nuclear Fusion, Stellar Composition, Stellar Evolution, Convection, Giant Stars, Helium, Nitrogen, Planetary Nebulae, Stellar Mass, Astrophysics, Nucleosynthesis:Stellar Evolution, Planetary Nebulae:Element Abundances, Stellar Evolution:Nucleosynthesis},
+         year = 1986,
+        month = oct,
+       volume = {98},
+        pages = {1066-1071},
+          doi = {10.1086/131874},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1986PASP...98.1066S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{2017RSOS....470192S,
+       author = {{Salaris}, Maurizio and {Cassisi}, Santi},
+        title = "{Chemical element transport in stellar evolution models}",
+      journal = {Royal Society Open Science},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+         year = 2017,
+        month = aug,
+       volume = {4},
+       number = {8},
+          eid = {170192},
+        pages = {170192},
+          doi = {10.1098/rsos.170192},
+archivePrefix = {arXiv},
+       eprint = {1707.07454},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017RSOS....470192S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{2019ApJ...887...53F,
+       author = {{Farmer}, R. and {Renzo}, M. and {de Mink}, S.~E. and {Marchant}, P. and {Justham}, S.},
+        title = "{Mind the Gap: The Location of the Lower Edge of the Pair-instability Supernova Black Hole Mass Gap}",
+      journal = {\apj},
+     keywords = {Massive stars, Stellar mass loss, Supernovae, Astrophysical black holes, Stellar mass black holes, Stellar evolution, 732, 1613, 1668, 98, 1611, 1599, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2019,
+        month = dec,
+       volume = {887},
+       number = {1},
+          eid = {53},
+        pages = {53},
+          doi = {10.3847/1538-4357/ab518b},
+archivePrefix = {arXiv},
+       eprint = {1910.12874},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...887...53F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{2016LRSP...13....2B,
+       author = {{Basu}, Sarbani},
+        title = "{Global seismology of the Sun}",
+      journal = {Living Reviews in Solar Physics},
+     keywords = {Sun: interior, Sun: helioseismology, Sun: rotations, Stars: asteroseismology, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = aug,
+       volume = {13},
+       number = {1},
+          eid = {2},
+        pages = {2},
+          doi = {10.1007/s41116-016-0003-4},
+archivePrefix = {arXiv},
+       eprint = {1606.07071},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016LRSP...13....2B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2019ApJ...876..134C,
+       author = {{Claret}, Antonio and {Torres}, Guillermo},
+        title = "{The Dependence of Convective Core Overshooting on Stellar Mass: Reality Check and Additional Evidence}",
+      journal = {\apj},
+     keywords = {binaries: eclipsing, stars: evolution, stars: interiors, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = may,
+       volume = {876},
+       number = {2},
+          eid = {134},
+        pages = {134},
+          doi = {10.3847/1538-4357/ab1589},
+archivePrefix = {arXiv},
+       eprint = {1904.02714},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...876..134C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2021NatAs...5..715P,
+       author = {{Pedersen}, May G. and {Aerts}, Conny and {P{\'a}pics}, P{\'e}ter I. and {Michielsen}, Mathias and {Gebruers}, Sarah and {Rogers}, Tamara M. and {Molenberghs}, Geert and {Burssens}, Siemen and {Garcia}, Stefano and {Bowman}, Dominic M.},
+        title = "{Internal mixing of rotating stars inferred from dipole gravity modes}",
+      journal = {Nature Astronomy},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = jan,
+       volume = {5},
+        pages = {715-722},
+          doi = {10.1038/s41550-021-01351-x},
+archivePrefix = {arXiv},
+       eprint = {2105.04533},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021NatAs...5..715P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{zahn1991,
+       author = {{Zahn}, J. -P.},
+        title = "{Convective penetration in stellar interiors.}",
+      journal = {\aap},
+     keywords = {Convection, Solar Interior, Stellar Interiors, Stellar Structure, Computational Astrophysics, Stellar Evolution, Stellar Physics, Astrophysics},
+         year = 1991,
+        month = dec,
+       volume = {252},
+        pages = {179-188},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1991A&A...252..179Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{roxburgh1989,
+       author = {{Roxburgh}, I.~W.},
+        title = "{Integral constraints on convective overshooting}",
+      journal = {\aap},
+     keywords = {Convection, Stellar Evolution, Stellar Models, Dissipation, Fluid Dynamics, Mixing Length Flow Theory, Nonadiabatic Conditions, Stellar Structure, Astrophysics},
+         year = 1989,
+        month = mar,
+       volume = {211},
+       number = {2},
+        pages = {361-364},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1989A&A...211..361R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Paxton2011,
+  author = {{Paxton}, B. and {Bildsten}, L. and {Dotter}, A. and {Herwig}, F. and {Lesaffre}, P. and {Timmes}, F.},
+  title = {{Modules for Experiments in Stellar Astrophysics (MESA)}},
+  journal = {\apjs},
+  archivePrefix = {arXiv},
+  eprint = {1009.1622},
+  primaryClass = {astro-ph.SR},
+  keywords = {methods: numerical, stars: evolution, stars: general},
+  year = {2011},
+  month = {jan},
+  volume = {192},
+  eid = {3},
+  pages = {3},
+  doi = {10.1088/0067-0049/192/1/3},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2011ApJS..192....3P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Paxton2013,
+  author = {{Paxton}, B. and {Cantiello}, M. and {Arras}, P. and {Bildsten}, L. and {Brown}, E.~F. and {Dotter}, A. and {Mankovich}, C. and {Montgomery}, M.~H. and {Stello}, D. and {Timmes}, F.~X. and {Townsend}, R.},
+  title = {{Modules for Experiments in Stellar Astrophysics (MESA): Planets, Oscillations, Rotation, and Massive Stars}},
+  journal = {\apjs},
+  archivePrefix = {arXiv},
+  eprint = {1301.0319},
+  primaryClass = {astro-ph.SR},
+  keywords = {asteroseismology, methods: numerical, planets and satellites: physical evolution, stars: evolution, stars: massive, stars: rotation},
+  year = {2013},
+  month = {sep},
+  volume = {208},
+  eid = {4},
+  pages = {4},
+  doi = {10.1088/0067-0049/208/1/4},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJS..208....4P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Paxton2015,
+  author = {{Paxton}, B. and {Marchant}, P. and {Schwab}, J. and {Bauer}, E.~B. and {Bildsten}, L. and {Cantiello}, M. and {Dessart}, L. and {Farmer}, R. and {Hu}, H. and {Langer}, N. and {Townsend}, R.~H.~D. and {Townsley}, D.~M. and {Timmes}, F.~X.},
+  title = {{Modules for Experiments in Stellar Astrophysics (MESA): Binaries, Pulsations, and Explosions}},
+  journal = {\apjs},
+  archivePrefix = {arXiv},
+  eprint = {1506.03146},
+  primaryClass = {astro-ph.SR},
+  keywords = {binaries: general, methods: numerical, nuclear reactions, nucleosynthesis, abundances, shock waves, stars: evolution, stars: oscillations},
+  year = {2015},
+  month = {sep},
+  volume = {220},
+  eid = {15},
+  pages = {15},
+  doi = {10.1088/0067-0049/220/1/15},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJS..220...15P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Paxton2018,
+  author = {{Paxton}, B. and {Schwab}, J. and {Bauer}, E.~B. and {Bildsten}, L. and {Blinnikov}, S. and {Duffell}, P. and {Farmer}, R. and {Goldberg}, J.~A. and {Marchant}, P. and {Sorokina}, E. and {Thoul}, A. and {Townsend}, R.~H.~D. and {Timmes}, F.~X.},
+  title = {{Modules for Experiments in Stellar Astrophysics (MESA): Convective Boundaries, Element Diffusion, and Massive Star Explosions}},
+  journal = {\apjs},
+  archivePrefix = {arXiv},
+  eprint = {1710.08424},
+  primaryClass = {astro-ph.SR},
+  keywords = {convection, diffusion, hydrodynamics, methods: numerical, stars: evolution, supernovae: general },
+  year = {2018},
+  month = {feb},
+  volume = {234},
+  eid = {34},
+  pages = {34},
+  doi = {10.3847/1538-4365/aaa5a8},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJS..234...34P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Paxton2019,
+       author = {{Paxton}, Bill and {Smolec}, R. and {Schwab}, Josiah and {Gautschy}, A. and
+         {Bildsten}, Lars and {Cantiello}, Matteo and {Dotter}, Aaron and
+         {Farmer}, R. and {Goldberg}, Jared A. and {Jermyn}, Adam S. and
+         {Kanbur}, S.~M. and {Marchant}, Pablo and {Thoul}, Anne and
+         {Townsend}, Richard H.~D. and {Wolf}, William M. and {Zhang}, Michael and
+         {Timmes}, F.~X.},
+        title = "{Modules for Experiments in Stellar Astrophysics (MESA): Pulsating Variable Stars, Rotation, Convective Boundaries, and Energy Conservation}",
+      journal = {\apjs},
+     keywords = {stars: evolution, stars: general, stars: interiors, stars: oscillations:  including pulsations, stars: rotation, stars: variables: general, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Jul",
+       volume = {243},
+       number = {1},
+          eid = {10},
+        pages = {10},
+          doi = {10.3847/1538-4365/ab2241},
+archivePrefix = {arXiv},
+       eprint = {1903.01426},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJS..243...10P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Itoh1996,
+  author = {{Itoh}, N. and {Hayashi}, H. and {Nishikawa}, A. and {Kohyama}, Y. },
+  title = {{Neutrino Energy Loss in Stellar Interiors. VII. Pair, Photo-, Plasma, Bremsstrahlung, and Recombination Neutrino Processes}},
+  journal = {\apjs},
+  keywords = {DENSE MATTER, ELEMENTARY PARTICLES, RADIATION MECHANISMS: NONTHERMAL, STARS: INTERIORS, METHODS: NUMERICAL},
+  year = {1996},
+  month = {feb},
+  volume = {102},
+  pages = {411},
+  doi = {10.1086/192264},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJS..102..411I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Cyburt2010,
+  author = {{Cyburt}, R.~H. and {Amthor}, A.~M. and {Ferguson}, R. and {Meisel}, Z. and {Smith}, K. and {Warren}, S. and {Heger}, A. and {Hoffman}, R.~D. and {Rauscher}, T. and {Sakharuk}, A. and {Schatz}, H. and {Thielemann}, F.~K. and {Wiescher}, M.},
+  title = {{The JINA REACLIB Database: Its Recent Updates and Impact on Type-I X-ray Bursts}},
+  journal = {\apjs},
+  keywords = {nuclear reactions, nucleosynthesis, abundances, X-rays: bursts},
+  year = {2010},
+  month = {jul},
+  volume = {189},
+  pages = {240-252},
+  doi = {10.1088/0067-0049/189/1/240},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJS..189..240C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@article{Chugunov2007,
+  author = {{Chugunov}, A.~I. and {Dewitt}, H.~E. and {Yakovlev}, D.~G.},
+  title = {{Coulomb tunneling for fusion reactions in dense matter: Path integral MonteCarlo versus mean field}},
+  journal = {\prd},
+  archivePrefix = {arXiv},
+  eprint = {0707.3500},
+  keywords = {Nucleosynthesis in novae supernovae and other explosive environments},
+  year = {2007},
+  month = {jul},
+  volume = {76},
+  number = {2},
+  eid = {025028},
+  pages = {025028},
+  doi = {10.1103/PhysRevD.76.025028},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2007PhRvD..76b5028C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@article{Fuller1985,
+  author = {{Fuller}, G.~M. and {Fowler}, W.~A. and {Newman}, M.~J.},
+  title = {{Stellar weak interaction rates for intermediate-mass nuclei. IV - Interpolation procedures for rapidly varying lepton capture rates using effective log (ft)-values}},
+  journal = {\apj},
+  keywords = {LEPTONS, NEUTRINOS, NUCLEAR CAPTURE, STELLAR CORES, WEAK INTERACTIONS (FIELD THEORY), COMPUTATIONAL ASTROPHYSICS, COMPUTERIZED SIMULATION, ELECTRON CAPTURE},
+  year = {1985},
+  month = {jun},
+  volume = {293},
+  pages = {1-16},
+  doi = {10.1086/163208},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1985ApJ...293....1F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@article{Oda1994,
+  author = {{Oda}, T. and {Hino}, M. and {Muto}, K. and {Takahara}, M. and {Sato}, K.},
+  title = {{Rate Tables for the Weak Processes of sd-Shell Nuclei in Stellar Matter}},
+  journal = {Atomic Data and Nuclear Data Tables},
+  year = {1994},
+  month = {mar},
+  volume = {56},
+  pages = {231-403},
+  doi = {10.1006/adnd.1994.1007},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1994ADNDT..56..231O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@article{Langanke2000,
+  author = {{Langanke}, K. and {Mart{\'{\i}}nez-Pinedo}, G.},
+  title = {{Shell-model calculations of stellar weak interaction rates: II. Weak rates for nuclei in the mass range /A=45-65 in supernovae environments}},
+  journal = {Nuclear Physics A},
+  eprint = {nucl-th/0001018},
+  year = {2000},
+  month = {jun},
+  volume = {673},
+  pages = {481-508},
+  doi = {10.1016/S0375-9474(00)00131-7},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2000NuPhA.673..481L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+
+@ARTICLE{Iglesias1993,
+  author = {{Iglesias}, C.~A. and {Rogers}, F.~J.},
+  title = {{Radiative opacities for carbon- and oxygen-rich mixtures}},
+  journal = {\apj},
+  keywords = {Carbon Isotopes, Hydrogen Isotopes, Main Sequence Stars, Oxygen Isotopes, Stellar Envelopes, Stellar Evolution, Asymptotic Giant Branch Stars, Radiative Transfer, Stellar Structure},
+  year = {1993},
+  month = {aug},
+  volume = {412},
+  pages = {752-760},
+  doi = {10.1086/172958},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1993ApJ...412..752I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Iglesias1996,
+  author = {{Iglesias}, C.~A. and {Rogers}, F.~J.},
+  title = {{Updated Opal Opacities}},
+  journal = {\apj},
+  keywords = {ATOMIC DATA, ATOMIC PROCESSES, STARS: INTERIORS},
+  year = {1996},
+  month = {jun},
+  volume = {464},
+  pages = {943},
+  doi = {10.1086/177381},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJ...464..943I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Buchler1976,
+   author = {{Buchler}, J.~R. and {Yueh}, W.~R.},
+    title = "{Compton scattering opacities in a partially degenerate electron plasma at high temperatures}",
+  journal = {\apj},
+ keywords = {Compton Effect, Degenerate Matter, Electron Plasma, High Temperature Plasmas, Mean Free Path, Opacity, Plasmons, Light Scattering, Photons, Thomson Scattering},
+     year = 1976,
+    month = dec,
+   volume = 210,
+    pages = {440-446},
+      doi = {10.1086/154847},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1976ApJ...210..440B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Cassisi2007,
+   author = {{Cassisi}, S. and {Potekhin}, A.~Y. and {Pietrinferni}, A. and 
+	{Catelan}, M. and {Salaris}, M.},
+    title = "{Updated Electron-Conduction Opacities: The Impact on Low-Mass Stellar Models}",
+  journal = {\apj},
+   eprint = {astro-ph/0703011},
+ keywords = {Conduction, Stars: Evolution, Stars: Horizontal-Branch, Stars: Interiors, Stars: White Dwarfs},
+     year = 2007,
+    month = jun,
+   volume = 661,
+    pages = {1094-1104},
+      doi = {10.1086/516819},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2007ApJ...661.1094C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Ferguson2005,
+  author = {{Ferguson}, J.~W. and {Alexander}, D.~R. and {Allard}, F. and {Barman}, T. and {Bodnarik}, J.~G. and {Hauschildt}, P.~H. and {Heffner-Wong}, A. and {Tamanai}, A.},
+  title = {{Low-Temperature Opacities}},
+  journal = {\apj},
+  eprint = {astro-ph/0502045},
+  keywords = {Atomic Data, Equation of State, Methods: Numerical, Molecular Data},
+  year = {2005},
+  month = {apr},
+  volume = {623},
+  pages = {585-596},
+  doi = {10.1086/428642},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2005ApJ...623..585F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@MISC{Irwin2004,
+  author = {{Irwin}, Alan.~W.},
+  title = {The FreeEOS Code for Calculating the Equation of State for Stellar Interiors},
+  url = {http://freeeos.sourceforge.net/},
+  year = {2004},
+}
+
+@ARTICLE{Timmes2000,
+  author = {{Timmes}, F.~X. and {Swesty}, F.~D.},
+  title = {{The Accuracy, Consistency, and Speed of an Electron-Positron Equation of State Based on Table Interpolation of the Helmholtz Free Energy}},
+  journal = {\apjs},
+  keywords = {EQUATION OF STATE, HYDRODYNAMICS, METHODS: NUMERICAL, STARS: GENERAL},
+  year = {2000},
+  month = {feb},
+  volume = {126},
+  pages = {501-516},
+  doi = {10.1086/313304},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2000ApJS..126..501T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Saumon1995,
+  author = {{Saumon}, D. and {Chabrier}, G. and {van Horn}, H.~M.},
+  title = {{An Equation of State for Low-Mass Stars and Giant Planets}},
+  journal = {\apjs},
+  keywords = {EQUATION OF STATE, STARS: INTERIORS, STARS: LOW-MASS, BROWN DWARFS, STARS: PLANETARY SYSTEMS},
+  year = {1995},
+  month = {aug},
+  volume = {99},
+  pages = {713},
+  doi = {10.1086/192204},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1995ApJS...99..713S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Potekhin2010,
+  author = {{Potekhin}, A.~Y. and {Chabrier}, G.},
+  title = {{Thermodynamic Functions of Dense Plasmas: Analytic Approximations for Astrophysical Applications}},
+  journal = {Contributions to Plasma Physics},
+  archivePrefix = {arXiv},
+  eprint = {1001.0690},
+  primaryClass = {physics.plasm-ph},
+  year = {2010},
+  month = {jan},
+  volume = {50},
+  pages = {82-87},
+  doi = {10.1002/ctpp.201010017},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2010CoPP...50...82P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Rogers2002,
+   author = {{Rogers}, F.~J. and {Nayfonov}, A.},
+    title = "{Updated and Expanded OPAL Equation-of-State Tables: Implications for Helioseismology}",
+  journal = {\apj},
+ keywords = {Atomic Processes, Equation of State, Sun: Oscillations},
+     year = 2002,
+    month = sep,
+   volume = 576,
+    pages = {1064-1074},
+      doi = {10.1086/341894},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...576.1064R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Eggleton1983,
+  author = {{Eggleton}, P.~P.},
+  title = {{Approximations to the radii of Roche lobes}},
+  journal = {\apj},
+  keywords = {Binary Stars, Celestial Mechanics, Orbital Elements, Roche Limit, Mass Ratios, Radii},
+  year = {1983},
+  month = {may},
+  volume = {268},
+  pages = {368},
+  doi = {10.1086/160960},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1983ApJ...268..368E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@article{Ritter1988,
+  author = {{Ritter}, H.},
+  title = {{Turning on and off mass transfer in cataclysmic binaries}},
+  journal = {\aap},
+  keywords = {Accretion Disks, Binary Stars, Cataclysmic Variables, Mass Transfer, Stellar Evolution, Angular Momentum, Computational Astrophysics, Main Sequence Stars, Photosphere, Stellar Atmospheres, White Dwarf Stars},
+  year = {1988},
+  month = {aug},
+  volume = {202},
+  pages = {93-100},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/1988A%26A...202...93R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+}
+
+@ARTICLE{Dewitt1973,
+       author = {{Dewitt}, H.~E. and {Graboske}, H.~C. and {Cooper}, M.~S.},
+        title = "{Screening Factors for Nuclear Reactions. I. General Theory}",
+      journal = {\apj},
+         year = 1973,
+        month = Apr,
+       volume = {181},
+        pages = {439-456},
+          doi = {10.1086/152061},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/1973ApJ...181..439D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{Salpeter1954,
+       author = {{Salpeter}, E.~E.},
+        title = "{Electrons Screening and Thermonuclear Reactions}",
+      journal = {Australian Journal of Physics},
+         year = 1954,
+        month = Sep,
+       volume = {7},
+        pages = {373},
+          doi = {10.1071/PH540373},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/1954AuJPh...7..373S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Alastuey1978,
+       author = {{Alastuey}, A. and {Jancovici}, B.},
+        title = "{Nuclear reaction rate enhancement in dense stellar matter.}",
+      journal = {\apj},
+     keywords = {Astrophysics, Magnetohydrodynamics, Nuclear Astrophysics, Reaction Kinetics, Thermonuclear Reactions, Correlation, Nuclei (Nuclear Physics), Perturbation Theory, Potential Theory, Quantum Mechanics, Astrophysics, Nuclear Reactions:Stellar Interiors},
+         year = 1978,
+        month = Dec,
+       volume = {226},
+        pages = {1034-1040},
+          doi = {10.1086/156681},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/1978ApJ...226.1034A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Itoh1979,
+       author = {{Itoh}, N. and {Totsuji}, H. and {Ichimaru}, S. and {Dewitt}, H.~E.},
+        title = "{Enhancement of thermonuclear reaction rate due to strong screening. II - Ionic mixtures}",
+      journal = {\apj},
+     keywords = {Nonuniform Plasmas, Reaction Kinetics, Thermonuclear Reactions, Astrophysics, Binary Mixtures, Dense Plasmas, Monte Carlo Method, Astrophysics},
+         year = 1979,
+        month = Dec,
+       volume = {234},
+        pages = {1079-1084},
+          doi = {10.1086/157590},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/1979ApJ...234.1079I},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
