--- a/massive_stars/manuscript/ms_MassiveStarWaves.tex
+++ b/massive_stars/manuscript/ms_MassiveStarWaves.tex
@@ -135,6 +135,14 @@ Computations were conducted with support from the NASA High End Computing (HEC) 
 
 \appendix
 
+\input{appendix_numerical_methods}
+
+\input{appendix_mesa_dedalus}
+
+\input{appendix_transforms}
+
+\input{appendix_mesa}
+
 \bibliographystyle{aasjournal}
 \bibliography{biblio}
 \end{document}
